chamber/css/base.css
/* Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.  */
html {
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
}

/*----------- apply a natural box layout model to all elements --------------*/
* {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  background-color: #283618;
}

img {
  max-width: 100%;
}

header img {
  max-width: 5em;
  padding-top: 2em;
}

header {
  background-color: #606c38;
  background-image: url("../images/pg-mnt-1100.jpg");
  color: black;
  font-family: "Barlow Semi Condensed", sans-serif;
  font-size: 10px;
  padding-bottom: 5px;
  position: relative;
}

nav button {
  margin: 0.2rem 2vw;
  background-color: transparent;
  border: none;
  font-size: 2rem;
  color: #bc6c25;
}

nav {
  text-align: right;
  font-size: 1em;
}

nav ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

nav ul li a {
  display: block;
  padding: 0.8rem 2vw;
  text-decoration: none;
  background-color: #283618;
  color: white;
  border-top: 1px solid rgba(0, 0, 0, 0.5);
  font-size: 18px;
}

nav ul li a:hover {
  background-color: rgba(0, 0, 0, 0.3);
}

nav ul li.active a {
  background-color: rgba(0, 0, 0, 0.2);
  color: white;
}

nav ul {
  display: none;
}

nav ul.open {
  display: block;
}

#hamburgerBtn span:nth-child(1) {
  display: block;
}
#hamburgerBtn span:nth-child(2) {
  display: none;
}

#hamburgerBtn.open span:nth-child(1) {
  display: none;
}
#hamburgerBtn.open span:nth-child(2) {
  display: block;
}

h1,
h2,
h3 {
  font-family: "Barlow Semi Condensed", sans-serif;
}

h2 {
  font-size: 25;
}

h3 {
  font-size: 22px;
}

.socialmedia img {
  width: 20px;
}

.date {
  margin: 0.5rem;
  border: 1px solid #bbb;
  padding: 0.75rem;
  background-color: #f7f0e3;
  text-align: center;
  font-weight: 800;
  font-size: 16px;
  opacity: 95%;
}

.top {
  display: grid;
  grid-template-columns: 1fr 2fr 1fr 1fr;
  margin-left: 10px;
  grid-gap: 5px;
}

.top img.logo {
  grid-column: 1/2;
  justify-self: center;
  max-width: 100%;
}

.byline {
  font-size: 0.6em;
}

.top h1 {
  line-height: 0.8em;
  grid-column: 2/3;
  align-self: center;
  background-color: rgba(0, 0, 0, 0.1);
  padding: 10px;
  border-radius: 70px;
}

.social {
  grid-column: 3/4;
  justify-self: end;
  align-self: center;
}

nav {
  grid-column: 4/5;
  align-self: center;
  justify-self: start;
}

.socialmedia {
  margin-left: 5px;
}

#banner {
  position: absolute;
  background-color: #bc6c25;
  color: white;
  padding: 2px;
  font-size: 10px;
  font-weight: 100;
  border: 1px solid rgba(0, 0, 0, 0.2);
  border-radius: 20px;
  top: 55px;
  z-index: 1;
}

/*--------- index.html main -----------*/

main {
  display: grid;
  grid-template-rows: repeat(auto-fit, minmax(320px, 1fr));
  font-family: "Lora", serif;
  text-align: center;
  margin: 5px;
  grid-gap: 5px;
}

main picture.hero {
  width: 100%;
  margin: 0 0 0 0;
  position: relative;
  grid-row: 1/2;
  align-self: center;
  object-fit: cover;
}

main picture.hero img {
  width: 100%;
  max-width: 100%;
  object-fit: cover;
}

#joinBtn {
  background-color: #bc6c25;
  font-size: 18px;
  color: black;
  font-weight: 750;
  padding: 0.6em;
  border-radius: 20px;
}

#join2Btn {
  background-color: #bc6c25;
  font-size: 22px;
  color: black;
  font-weight: 750;
  padding: 0.6em;
  border-radius: 20px;
  margin-top: 2%;
  margin-bottom: 2%;
}

main div {
  background-color: #f7f0e3;
}

main ul {
  list-style: none;
}

.spotlights > div {
  padding: 20px;
}

.join {
  display: none;
}

.spotlight-1:nth-child(2) {
  display: none;
}

img.spotlightlogo {
  width: 100px;
  max-width: 100%;
}

p {
  font-size: 18px;
  line-height: 1.3em;
  margin: 0 3% 2% 3%;
}

q {
  display: inline;
  font-size: 16px;
}

q:before,
q:after {
  content: "";
}

img#weathericon {
  width: 100px;
  max-width: 100%;
}

/*-------- discover.html main -------*/
.discover-grid {
  display: grid;
  grid-template-rows: 0.5fr 9fr;
  grid-template-columns: 1fr;
}

.discover-stats {
  grid-row: 1/2;
}

.gallery {
  grid-row: 2/3;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  row-gap: 10px;
  max-width: 100%;
}
.gallery picture {
  align-items: center;
  margin: 0px;
  max-width: 100%;
}

.golden-gallery img[data-src] {
  filter: blur(0.5em);
  max-width: 100%;
  justify-self: center;
  align-self: center;
  text-align: center;
}

.golden-gallery img {
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-width: 100%;
  filter: blur(0em);
  transition: filter 3s;
}

.gallery-description {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding: 0px 20px 0px 20px;
}

/*-------- join.html main -------*/

.join-grid {
  display: flex;
  flex-direction: column;
}

.join-grid h1 {
  color: white;
  line-height: 1.2em;
}

.membership-level {
  margin-left: 10px;
}

.membership-info {
  padding-bottom: 10px;
}

.membership-info h2 {
  padding-top: 20px;
}

.membership-info h3 {
  font-size: 20px;
  margin-bottom: 6px;
}

form {
  background-color: #f7f0e3;
  padding-top: 10px;
}

form fieldset {
  margin: 2rem 0;
  border: 1px solid #606c38;
  border-radius: 10px;
  padding: 0.5rem 2%;
}

form legend {
  color: black;
  margin: 0 1rem;
  padding: 0 0.5rem;
}

form label.top,
form div {
  display: block;
  padding-top: 1rem;
  color: #9c2c13;
  font-size: 0.8rem;
}

form label.top input {
  -webkit-appearance: none;
  display: block;
  font-size: 16px;
  border: solid 1px #999;
  border-radius: 4px;
  padding: 0.75rem;
  color: #555;
  width: 100%;
  max-width: 20rem;
  background-color: rgba(0, 0, 0, 0.1);
}

form label.sbs {
  display: block;
  padding: 0.75rem 0;
  color: #283618;
}

form input.submitBtn {
  border: none;
  background-color: #bc6c25;
  color: black;
  font-size: 18px;
  font-weight: 800;
  border-radius: 1rem;
  padding: 0.75rem 1.5rem;
  margin: 0 0 2rem 2%;
  width: 96%;
  max-width: 20rem;
}

form label.top input:required {
  border-left: #bc6c25 solid 6px;
}

form label.top input:required:valid {
  border-left: #606c38 solid 6px;
}

/*-------- Directory -------*/
.directory-grid {
  display: block;
}

.directory-grid h1 {
  color: white;
  line-height: 1.2em;
  font-size: 32px;
}

#gridBtn {
  margin: 0.2rem 2vw;
  background-color: #f7f0e3;
  border: none;
  border-radius: 10px;
  font-size: 2rem;
  color: #bc6c25;
}

.display-btns {
  background-color: #283618;
}

#listBtn {
  margin: 0.2rem 2vw;
  background-color: #f7f0e3;
  border: none;
  border-radius: 10px;
  font-size: 2rem;
  color: #bc6c25;
}

/* load view */
.cards {
  text-align: center;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
  grid-gap: 5px;
  border: 10px solid #606c38;
  background-color: #606c38;
}

.dicard {
  border: 2px #283618 solid;
  border-collapse: collapse;
  background-color: #f7f0e3;
  padding: 10px;
  box-shadow: 0 0 30px #283618;
}

.dicard img {
  width: 80px;
  max-width: 100%;
}

/* grid view */
.cards.gridview {
  text-align: center;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
  grid-gap: 5px;
  border: 10px solid #606c38;
  background-color: #606c38;
}

.gridview .dicard {
  border: 2px #283618 solid;
  border-collapse: collapse;
  background-color: #f7f0e3;
  padding: 10px;
  box-shadow: 0 0 30px #283618;
}

.dicard img {
  width: 80px;
  max-width: 100%;
}

.gridview p.diaddress {
  display: block;
}

.gridview.dicard.diphone {
  display: block;
}

.gridview.dicard.diwebpage {
  display: block;
}

/* list view */
.cards.listview {
  display: block;
}

.listview .dicard {
  display: none;
}
.listView .dicard img {
  display: none;
}

.listview .dicard h2 {
  display: block;
}

.listview h2 {
  font-size: 20px;
}
.listview .dicard {
  display: grid;
  grid-template-columns: 1fr;
  text-align: left;
  border: transparent;
  box-shadow: none;
}

.listview .dicard:nth-of-type(even) {
  background-color: #f2e1d3;
}

.listview .dicard img.dilogo {
  display: none;
}

/*-------- Contact Page-------*/
.contact-grid {
  display: block;
}

.contact-grid h1 {
  color: white;
  font-size: 45px;
}

.contact-grid h3 {
  margin-bottom: 2px;
}

.contact-info {
  padding: 5px;
}

.contact-social img.icon {
  width: 50px;
  padding-top: 5px;
}

form label.contact-form-top,
form div {
  display: block;
  padding-top: 1rem;
  color: #9c2c13;
  font-size: 0.8rem;
}

form label.contact-form-top input {
  -webkit-appearance: none;
  display: block;
  font-size: 16px;
  border: solid 1px #999;
  border-radius: 4px;
  padding: 0.75rem;
  color: #555;
  width: 100%;
  max-width: 20rem;
  background-color: rgba(0, 0, 0, 0.1);
}

form label.contact-form-top input:required {
  border-left: #bc6c25 solid 6px;
}

form label.contact-form-top input:required:valid {
  border-left: #606c38 solid 6px;
}

#sendBtn {
  margin-top: 2em;
  width: 175px;
}

label.question {
  line-height: 2.5em;
}
/*-------- footer -------*/

footer {
  display: block;
  background-color: #606c38;
  color: white;
  font-family: "Barlow Semi Condensed", sans-serif;
  text-align: center;
}

footer a {
  color: white;
}

footer img {
  max-width: 5em;
  margin-top: 10px;
}

footer li {
  list-style: none;
}

.address {
  font-size: 1.1em;
  font-weight: 700;
}

.foot {
  line-height: 1.3em;
  padding-bottom: 5px;
}

.foot-name {
  font-weight: 700;
}

.num-of-visits {
  font-size: 18px;
  font-weight: 750;
  background-color: #bc6c25;
  padding: 5px;
  text-align: center;
  border-radius: 45px;
}

.clearfix:after {
  content: "";
  display: table;
  clear: both;
}

